Fri May 18 19:28:24 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - updated documentation to reflect the automatic installation of
   udev/hotplug scripts.
	
Thu May 17 23:36:38 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added Belkin F6C1200-UNV to the list of known
   devices.

Thu May 17 09:44:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * server/upsd.c:
   - provide additional debug information for setuptcp() if IPv6 is used
     so that it will never break from looping through the list of addrinfo
     elements without showing why (in debug mode >= 3)
   - minor changes (coding style)

Sat May 12 19:56:02 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/driver.list: added CyberPower PR2200 that is supported through
   the powerpanel driver (added some others for this driver too)

Sat May 12 19:52:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab, docs/new-names.txt: add 'ups.coldstart' variable
   that indicates if the UPS will coldstart from battery or not.

Sat May 12 19:03:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.[ch], man/powerpanel.8: Russ Romano provided
   enough serial traces for the CyberPower PR2200 so that we could
   add support for this (binary protocol) to the existing 'powerpanel'
   driver (text protocol). Which protocol is used, will be detected
   by the driver automatically.

Mon May  7 22:47:32 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - configure.in, packaging/generic-rpm: moved from packaging/redhat to
   deconflict with RawHide spec files on case-insensitive filesystems.

Mon May  7 22:30:41 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: fixed UPS replies to pass recently added
   additional checks in megatec.c.

Mon May  7 08:50:21 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - packaging/redhat: import the latest RedHat RawHide .spec file, along